# Digital_Annealer

./: CMakeLists.txt  README.md  anneal.cmd  script.sh
DataRace/: README.md  utils.hpp
DataRace/constants/: generate_hamiltion_matrix.py  generate_linear_terms.py  linear_40x40.txt
MetropolisHastings/: ising_cpu.cpp  utils.hpp
MetropolisHastings/constants/: J_Matrix_20x20.txt  J_Matrix_45x45.txt  J_Matrix_60x60.txt  linear_45x45.txt
annealer_gpu_SI/: CMakeLists.txt
annealer_gpu_SI/include/annealer_gpu_SI/: utils.hpp
annealer_gpu_SI/src/: main.cu  utils.cc
bin_SI/: J_Matrix_100x100.txt  J_Matrix_120x120.txt  J_Matrix_140x140.txt  J_Matrix_180x180.txt  J_Matrix_20x20.txt  J_Matrix_230x230.txt  J_Matrix_40x40.txt  J_Matrix_4x4.txt  J_Matrix_60x60.txt  J_Matrix_80x80.txt  annealer_gpu_SI  avgmagnet_40x40.txt  avgmagnet_4x4.txt  linear_80x80.txt  spins_40x40.txt  spins_4x4.txt
cmake/Modules/: FindCUDALibs.cmake  always_configure.cmake
compiler_info/: CMakeLists.txt
cpu/: J_Matrix_25x25.txt  J_Matrix_40x40.txt  J_Matrix_45x45.txt  README.txt  ising_cpu.cpp  linear_25x25.txt  linear_40x40.txt  utils.hpp
cpu/Coupling/: J_Matrix_20x20.txt  J_Matrix_40x40.txt  linear_40x40.txt
cpu/constants/: J_Matrix_25x25.txt  linear_20x20.txt  linear_60x60.txt
dwave_neal/: DW_Ising_format.py  Dwave_neal.ipynb  Ising_DW_format.py  checkIsingFormat.py
refer/: DW_Ising_format.py
reference/: generate_hamiltion_matrix.py  generate_linear_terms.py
